send email function and updrade pg to pgx
